ReviewForce/force-app/main/default/objects/Location__c/fields/AYCE__c.field-meta.xml
<CustomField>
    <fullName>AYCE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All You Can Eat?</description>
    <label>AYCE?</label>
    <type>Checkbox</type>
</CustomField>