ReviewForce/force-app/main/default/objects/Location__c/fields/Yelp_Link__c.field-meta.xml
<CustomField>
    <fullName>Yelp_Link__c</fullName>
    <label>Yelp Link</label>
    <type>Url</type>
</CustomField>